[package]
name = "jarvis"
version = "0.1.0"
authors = ["Nick Alexeev <nickalexeev@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion="0.4.0"
generational-arena = "0.2.8"
nalgebra = "0.25.1"
log="0.4"
