[package]
name = "webgl"
version = "0.1.0"
authors = ["Nick Alexeev <nickalexeev@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jarvis = {path="../jarvis"}
web-sys = {version="0.3.48",features=["Document","HtmlCanvasElement","Window","WebGl2RenderingContext","WebGlBuffer","WebGlFramebuffer","WebGlProgram","WebGlUniformLocation","WebGlShader","WebGlTexture","WebGlVertexArrayObject","Element"]}
wasm-bindgen = "0.2.63"
js-sys="0.3.48"
